# otus-cpp-prof-hw-05-mvc

./: CMakeLists.txt  Doxyfile  README.md  graph_legend.html  index.html  main.cpp
.github/workflows/: release.yml
Controller/: DocumentsController.cpp  DocumentsController.h  GraphicsController.cpp  GraphicsController.h
Documents/: Document.h
Graphics/: Circle.h  Dot.h  Figure.h  Line.h  Point.h  Rectangle.h
Models/: documents_model.cpp  documents_model.h  graphics_model.cpp  graphics_model.h  v_documents_model.h  v_graphics_model.h
View/: documents_view.cpp  documents_view.h  graphics_view.cpp  graphics_view.h
